GNU make NEWS                                               -*-indented-text-*-
  History of user-visible changes.
  12 June 2004

Copyright (C) 2002, 2004  Free Software Foundation, Inc.
See the end for copying conditions.

All changes mentioned here are more fully described in the GNU make
manual, which is contained in this distribution as the file make.texinfo.

Please send remake bug reports to <rocky@panix.com>.
See the README file and the GNU remake manual for details on sending bug
reports.

Version 3.80+dbg-0.3cvs
*  trace override silent
Version 3.80+dbg-0.2
*  Add ability to print specified attributes of a target, e.g. "time",
  "deps", "vars"... 

* Improve reporting target locations.

* Improve target stack tracking.

* Add "write" command - ability to write target commands to a file
  with MAKE variables expanded, or show that inside a debugger
  session.

* Separate info from show. Make these act more like they do n gdb

* Stay in debugger when a makefile exits.

* First debugger documentation.

Version 3.80+dbg-0.1

Fork from version 3.80 

* New options
  --extended-errors (-E) call stack reporting, extended error reporting
  --trace (-x) gives tracing information before a command is run.
* Line numbers of commands in a target as they execute
* --debugger enters debugger comamnds are

  execution
   step, next, continue, skip
   restart, quit, exit

  breakpoints
   break   target
   delete  target

  data 
   print   variable
   examine string 
   up, down, frame
   set, setq
   where

  debugger   
   show, info
   trace {on, off, toggle}
   help

* Emacs debug interface makedb.el and a patched to gud.el


Version 3.80

* A new feature exists: order-only prerequisites.  These prerequisites
  affect the order in which targets are built, but they do not impact
  the rebuild/no-rebuild decision of their dependents.  That is to say,
  they allow you to require target B be built before target A, without